--- a/ActivSena_Maquetas/src/Comentarios/styles/ComentarStyle.css
+++ b/ActivSena_Maquetas/src/Comentarios/styles/ComentarStyle.css
@@ -1,4 +1,4 @@
-.table, .table-container {
+/*.table, .table-container {
   width: 100%;
   height: 50%;
   table-layout: fixed;
@@ -99,4 +99,4 @@
     .border {
       font-size: 12px;
     }
-  }
+  }*/
